tests/e2e/arg_name_shorthand3_error.story
body = ""
my_service command :body
